--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -988,7 +988,19 @@ HomePage As screen:
                 )
             Font: =Font.Lato
             Height: =132
-            OnSelect: =Select(Parent)
+            OnSelect: |-
+                =Select(Parent)
+                /*Set(
+                    SelectedMeeting,
+                    ThisItem
+                );
+                Set(
+                    variCalUID,
+                    GetCalenderIDForMeeting.Run(
+                        MyCalendarID,
+                        SelectedMeeting.Id
+                    )
+                );*/
             Text: =""
             Width: =530
             X: =3
@@ -1598,6 +1610,12 @@ HomePage As screen:
                             Id = ThisItem.Id
                         ).OptionalAttendees
                     )*/
+                    CountRows(First(Filter(
+                            MeetingList,
+                            //MeetingID = variCalUID.icaluid && ThisItem.IsSelected
+                            Title=ThisItem.Subject
+                        )).'{Attachments}'
+                    )
                 Width: =90
                 X: =200
                 Y: =117
