--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -1609,7 +1609,7 @@ HomePage As screen:
                             Id = ThisItem.Id
                         ).OptionalAttendees
                     )*/
-                    CountRows(
+                    If(IsBlank(
                         
                             First(Filter(
                                 MeetingList,
@@ -1617,7 +1617,15 @@ HomePage As screen:
                          Title=ThisItem.Subject
                             )
                         ).'{Attachments}'
-                    )
+                    ),"0",CountRows(
+                        
+                            First(Filter(
+                                MeetingList,
+                            //MeetingID = variCalUID.icaluid && ThisItem.IsSelected
+                         Title=ThisItem.Subject
+                            )
+                        ).'{Attachments}'
+                    ))
                 Width: =90
                 X: =200
                 Y: =117
@@ -2492,7 +2500,7 @@ HomePage As screen:
                         )).'{Attachments}'
                     )*/
                     //"0"
-                    CountRows(
+                    If(IsBlank(
                         
                             First(Filter(
                                 MeetingList,
@@ -2500,7 +2508,15 @@ HomePage As screen:
                          Title=ThisItem.Subject
                             )
                         ).'{Attachments}'
-                    )
+                    ),"0",CountRows(
+                        
+                            First(Filter(
+                                MeetingList,
+                            //MeetingID = variCalUID.icaluid && ThisItem.IsSelected
+                         Title=ThisItem.Subject
+                            )
+                        ).'{Attachments}'
+                    ))
                     
                 Width: =90
                 X: =200
