--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -6272,7 +6272,7 @@
                         Question_x003a__x0020_MeetingID.Value = variCalUID.icaluid
                     )
                 );
-                If(
+                /*If(
                     IsBlank('Gallery_ for question'),
                     Set(
                         varNoPollscreated,
@@ -6282,7 +6282,7 @@
                         varNoPollscreated,
                         false
                     )
-                );
+                );*/
                 If(User().FullName in varmeetingattendee.Title,Notify("You have already submitted Poll",NotificationType.Error, 0),Navigate(ViewPollScreen))
             RadiusBottomLeft: =3
             RadiusBottomRight: =3
@@ -6311,7 +6311,7 @@
                         Question_x003a__x0020_MeetingID.Value = variCalUID.icaluid
                     )
                 );
-                If(
+                /*If(
                     IsBlank('Gallery_ for question'),
                     Set(
                         varNoPollscreated,
@@ -6321,7 +6321,7 @@
                         varNoPollscreated,
                         false
                     )
-                );
+                );*/
                 If(User().FullName in varmeetingattendee.Title,Notify("You have already submitted Poll",NotificationType.Error, 0),Navigate(ViewPollScreen))
             TabIndex: =0
             Visible: =If(!(varOrganizerName=VarUserEmail),true,false)
@@ -7001,7 +7001,7 @@
             Height: =16
             Size: =12
             TabIndex: =0
-            Text: ="Let's create a new team event"
+            Text: ="Let's update the team event"
             Visible: =varShowUpdateMeeting
             Width: =245
             X: =790
