--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -129,6 +129,7 @@
     "UserLocale": "en-US"
   },
   "ScreenOrder": [
+    "Splash Screen",
     "HomePage",
     "MeetingDetails Screen",
     "ExportScreen",
