--- a/Certification App V2/CanvasManifest.json
+++ b/Certification App V2/CanvasManifest.json
@@ -111,7 +111,7 @@
     "Id": "799ee963-3bdf-4b7b-b3c5-968661ceb0a5",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
-    "ManualOfflineProfileId": null,
+    "ManualOfflineProfileId": "",
     "Name": "Certification Management App-V2",
     "OriginatingVersion": "1.334",
     "ParserErrorCount": 0,
